# ghostpost

./: README.md  db.sqlite3  manage.py  pyproject.toml
ghostpostapp/: admin.py  forms.py  models.py  views.py
ghostpostapp/migrations/: 0001_initial.py  0002_auto_20200819_1846.py
ghostpostproject/: asgi.py  settings.py  urls.py  wsgi.py
templates/: boasts.html  create_post.html  index.html  roasts.html  sort.html
